Fix cannot adjust line in dcbtool.8 and other manpage errors

--- a/.pc/fix-cannot-adjust-line-in-dcbtool-8.patch/lldpad.8
+++ b/.pc/fix-cannot-adjust-line-in-dcbtool-8.patch/lldpad.8
@@ -105,8 +105,8 @@ show lldpad version
 .B \-k
 used to terminate the first instance of lldpad that was started
 (e.g. from initrd).
-Once lldpad \-k has been invoked and lldpad has been restarted, subsequent
-invocations of lldpad \-k will not terminate lldpad.
+Once lldpad -k has been invoked and lldpad has been restarted, subsequent
+invocations of lldpad -k will not terminate lldpad.
 
 .TP
 .B \-s
