--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,10 @@
 lldpad (0.9.43+git20111215.c0498b-2) UNRELEASED; urgency=low
 
   * Replase libconfig8-dev to libconfig-dev (Closes: #661408)
+  * debian/lldpad.install:
+    - Remove var/lib/lldpad, not used any more (Closes: #669540)
 
- -- Liang Guo <bluestonechina@gmail.com>  Fri, 09 Mar 2012 20:59:50 +0800
+ -- Liang Guo <bluestonechina@gmail.com>  Mon, 23 Apr 2012 21:35:03 +0800
 
 lldpad (0.9.43+git20111215.c0498b-1) unstable; urgency=low
 
