--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,14 @@
-lldpad (0.9.43+git20111215.c0498b-2) UNRELEASED; urgency=low
+lldpad (0.9.44-1) unstable; urgency=low
 
+  * New upstream release
   * Replase libconfig8-dev to libconfig-dev (Closes: #661408)
   * debian/lldpad.install:
     - Remove var/lib/lldpad, not used any more (Closes: #669540)
+  * debian/control:
+    - Bump Standards-Version to 3.9.3
+    - Add libreadline-dev to Build-Depends
 
- -- Liang Guo <bluestonechina@gmail.com>  Mon, 23 Apr 2012 21:35:03 +0800
+ -- Liang Guo <bluestonechina@gmail.com>  Mon, 23 Apr 2012 22:02:53 +0800
 
 lldpad (0.9.43+git20111215.c0498b-1) unstable; urgency=low
 
