--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+lldpad (0.9.46-1) UNRELEASED; urgency=low
+
+  * [a1194ea] Add README.source
+  * [8e5431e] Imported Upstream version 0.9.46
+
+ -- Ritesh Raj Sarraf <rrs@debian.org>  Tue, 16 Jul 2013 19:11:22 +0530
+
 lldpad (0.9.44-1) unstable; urgency=low
 
   [ Liang Guo ]
