--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,7 @@ lldpad (0.9.46-3) unstable; urgency=low
   * Applied upstream's patch to switch to libnl-3.
   * Updated the standards version to 3.9.6; no changes required.
   * Added a lintian override for liblldp-clif1 packaged in lldapd.
+  * Prevent lldpad from being started at install (it breaks).
 
  -- Jacob Luna Lundberg <jacob@gnifty.net>  Thu, 23 Oct 2014 14:51:55 -0700
 
